bin/tests/errors/sema/sema_err_empty_array_literal.swg
#global fileprivate

#test
{
    var E = [] // swc-expected-error {{sema_err_empty_array_literal}}
}
